// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SortArrow Style tests should render with ascending arrow styles 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  height: 36px;
  width: 24px;
  position: absolute;
  left: 0;
  top: 50%;
  opacity: 0;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: opacity 120ms ease-in-out;
  transition: opacity 120ms ease-in-out;
  color: #3063E9;
  border: 0;
  background: none;
  outline: 0;
  padding: 2px 4px;
  margin: 0;
  cursor: pointer;
}

.circuit-0:focus {
  opacity: 1;
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-1 {
  margin: -2px 0;
}

.circuit-2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<button
  class="circuit-0"
  role="button"
  title="Sort"
>
  <svg
    class="circuit-1"
    fill="none"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8 11c-.266 0-.52-.104-.71-.29l-4-4A1.013 1.013 0 0 1 3 6a1 1 0 0 1 1-1c.266 0 .52.104.71.29L8 8.58l3.29-3.29c.19-.186.445-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71l-4 4c-.19.186-.444.29-.71.29z"
      fill="currentColor"
    />
  </svg>
  <span
    class="circuit-2"
  >
    Sort
  </span>
</button>
`;

exports[`SortArrow Style tests should render with both arrows styles 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  height: 36px;
  width: 24px;
  position: absolute;
  left: 0;
  top: 50%;
  opacity: 0;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: opacity 120ms ease-in-out;
  transition: opacity 120ms ease-in-out;
  color: #3063E9;
  border: 0;
  background: none;
  outline: 0;
  padding: 2px 4px;
  margin: 0;
  cursor: pointer;
}

.circuit-0:focus {
  opacity: 1;
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-1 {
  margin: -2px 0;
}

.circuit-3 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<button
  class="circuit-0"
  role="button"
  title="Sort"
>
  <svg
    class="circuit-1"
    fill="none"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8 5c.266 0 .52.104.71.29l4 4c.186.19.29.444.29.71a1 1 0 0 1-1 1c-.265 0-.52-.104-.71-.29L8 7.42l-3.29 3.29c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.266.104-.52.29-.71l4-4C7.48 5.104 7.734 5 8 5z"
      fill="currentColor"
    />
  </svg>
  <svg
    class="circuit-1"
    fill="none"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8 11c-.266 0-.52-.104-.71-.29l-4-4A1.013 1.013 0 0 1 3 6a1 1 0 0 1 1-1c.266 0 .52.104.71.29L8 8.58l3.29-3.29c.19-.186.445-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71l-4 4c-.19.186-.444.29-.71.29z"
      fill="currentColor"
    />
  </svg>
  <span
    class="circuit-3"
  >
    Sort
  </span>
</button>
`;

exports[`SortArrow Style tests should render with descending arrow styles 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  height: 36px;
  width: 24px;
  position: absolute;
  left: 0;
  top: 50%;
  opacity: 0;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: opacity 120ms ease-in-out;
  transition: opacity 120ms ease-in-out;
  color: #3063E9;
  border: 0;
  background: none;
  outline: 0;
  padding: 2px 4px;
  margin: 0;
  cursor: pointer;
}

.circuit-0:focus {
  opacity: 1;
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-1 {
  margin: -2px 0;
}

.circuit-2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<button
  class="circuit-0"
  role="button"
  title="Sort"
>
  <svg
    class="circuit-1"
    fill="none"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8 5c.266 0 .52.104.71.29l4 4c.186.19.29.444.29.71a1 1 0 0 1-1 1c-.265 0-.52-.104-.71-.29L8 7.42l-3.29 3.29c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.266.104-.52.29-.71l4-4C7.48 5.104 7.734 5 8 5z"
      fill="currentColor"
    />
  </svg>
  <span
    class="circuit-2"
  >
    Sort
  </span>
</button>
`;
